<resources>
    <string name="app_name">MagicSquare</string>
    <string name="quit">Quit</string>
    <string name="about">About</string>
    <string name="parameters">Parameters</string>
    <string name="play_game">Play Game</string>
    <string name="title_activity_game">MagicSquare - Game</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="plus">+</string>
    <string name="submit">Submit</string>
    <string name="new_game">New</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="wrong_answer">Wrong answer!\nTry again.</string>
    <string name="correct_answer">Congratulations!\nCorrect answer.</string>
    <plurals name="row_error">
        <item quantity="one">Sum of row %1$s is wrong.</item>
        <item quantity="other">Sums of rows %1$s are wrong.</item>
    </plurals>
    <plurals name="col_error">
        <item quantity="one">Sum of column %1$s is wrong.</item>
        <item quantity="other">Sums of columns %1$s are wrong.</item>
    </plurals>
    <plurals name="unused_error">
        <item quantity="one">Digit %1$s is missing.</item>
        <item quantity="other">Digits %1$s are missing.</item>
    </plurals>

    <string name="title_activity_settings">MagicSquare - Settings</string>
    <string name="level">Level</string>
    <string name="nickname">Nickname</string>
    <string name="level_info">Level i means that in the Magic Square only i cells are empty, all the other cells are already filled.</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="hello">Hello %1$s\!\nYour game level: %2$d.</string>
    <string name="params_info">Please provide username and game level. Use Parameters button.</string>
    <string name="error_not_filled">Not all inputs are filled.</string>
</resources>